k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-aggregator
  namespace: transaction-aggregator
spec:
  selector:
    app: transaction-aggregator
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
